# autonomous_frontier_explorer

./: .gitignore  CHANGELOG.rst  README.md  build.sh  build_node.sh  run.sh  start.sh
rviz/: slam.rviz
src/autonomousr_explorer_bringup/: CMakeLists.txt  package.xml
src/autonomousr_explorer_bringup/config/: explore_map.yaml  frontier_explorer.yaml  frontier_explorer.yaml.back  nav2_burger.yaml  nav2_exploration.yaml  nav2_exploration.yaml.bak  slam_toolbox.yaml  slam_toolbox.yaml.bak  task_manager.yaml
src/autonomousr_explorer_bringup/launch/: bringup_utils.py  full_system.launch.py  full_system_slam.launch.py  full_system_static.launch.py  nav2_bringup.launch.py  nav2_localization.launch.py  nav2_slam.launch.py  sim_bringup.launch.py
src/autonomousr_explorer_bringup/rviz/: slam.rviz
src/frontier_explorer/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/frontier_explorer/config/: frontier_explorer.yaml  nav2_exploration.yaml  nav2_exploration.yaml.bak
src/frontier_explorer/core/: types.h
src/frontier_explorer/core/costmap_adapter/: costmap_adapter.cpp  costmap_adapter.hpp
src/frontier_explorer/core/frontier_detector/: frontier_detector.cpp  frontier_detector.hpp
src/frontier_explorer/core/frontier_selector/: frontier_decision_types.hpp  frontier_pruner.cpp  frontier_pruner.hpp  frontier_scorer.cpp  frontier_scorer.hpp  frontier_selection_state.hpp  frontier_selection_strategy.cpp  frontier_selection_strategy.hpp  frontier_selector.cpp  frontier_selector.hpp
src/frontier_explorer/core/frontier_selector/score_components/: clearance_score.cpp  clearance_score.hpp  cluster_size_score.cpp  cluster_size_score.hpp  distance_score.cpp  distance_score.hpp  information_gain_score.cpp  information_gain_score.hpp  retry_penalty_score.cpp  retry_penalty_score.hpp  unknown_risk_penalty_score.cpp  unknown_risk_penalty_score.hpp
src/frontier_explorer/core/map_utils/: map_utils.cpp  map_utils.hpp
src/frontier_explorer/doc/: frontier_explorer_node_doc.md
src/frontier_explorer/include/frontier_explorer/: frontier_explorer_node.hpp
src/frontier_explorer/launch/: frontier_explorer.launch.py  nav2_exploration_bringup.launch.py  sim_slam_bringup.launch.py
src/frontier_explorer/nodes/frontier_explorer/: frontier_explorer_node.cpp  frontier_explorer_node.hpp  frontier_explorer_params.hpp  main.cpp
src/frontier_explorer/rviz/: slam.rviz
src/frontier_explorer/src/: frontier_explorer_node.cpp  main.cpp
src/frontier_explorer/utils/frontier/: frontier_selector_utils.hpp
src/frontier_explorer/utils/map/: map_utils.cpp  map_utils.hpp
src/frontier_explorer/visualization/: frontier_marker_publisher.cpp  frontier_marker_publisher.hpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: Explore.action
src/robot_interfaces/msg/: ExplorationState.msg  TaskManagerState.msg
src/robot_interfaces/srv/: StartExploration.srv
src/task_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/task_manager/config/: nav2_burger.yaml.bak  task_manager.yaml
src/task_manager/core/task_flow/: task_flow.cpp  task_flow.hpp
src/task_manager/core/task_state/: task_state.hpp
src/task_manager/core/task_types/: task_types.hpp
src/task_manager/doc/: task_manager_tec_doc.md
src/task_manager/include/task_manager/: task_manager_node.hpp  task_types.hpp
src/task_manager/launch/: demo_all.launch.py  nav2_bringup.launch.py  sim_bringup.launch.py  sim_slam_bringup.launch.py  task_manager.launch.py  tb3_navigation2_no_rviz.launch.py
src/task_manager/nodes/task_manager/: main.cpp  task_manager_node.cpp  task_manager_node.hpp
src/task_manager/rviz/: slam.rviz
src/task_manager/src/: main.cpp  task_manager_node.cpp
src/util_package/: CMakeLists.txt  package.xml
src/util_package/include/friendly_logging/: logging.h
