<?xml version="1.0"?>
<package format="3">
  <name>autonomousr_explorer_bringup</name>
  <version>0.0.1</version>
  <description>Aggregated launch files for the autonomous exploration stack.</description>

  <maintainer email="you@example.com">autonomousr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>task_manager</exec_depend>
  <exec_depend>frontier_explorer</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
