<?xml version="1.0"?>
<package format="3">
  <name>robot_interfaces</name>
  <version>0.0.1</version>
  <description>Common message/service/action definitions shared by mk_nav2 nodes.</description>

  <maintainer email="user@example.com">Unknown</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
