<package format="3">
  <name>util_package</name>
  <version>0.0.1</version>
  <description>Utility package for common tools and logging macros</description>
  <maintainer email="819119802@qq.com">xxx</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
</package>